--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -13,6 +13,7 @@
 
 <title>Sitzung 1: Einführung - Arbeiten mit Microsoft Excel</title>
 
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -380,7 +381,7 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Übungsdatensätze</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -516,20 +517,18 @@ div.tocify {
 <div class="column-right">
 <p><img src="images/q1_01einf/excelsquirrel.PNG" /></p>
 </div>
-<p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende/r das Programm günstig über eine Uni-Lizenz bei studyhouse erwerben. Klicken Sie dazu einfach <a href="https://www.studyhouse.de/cgi-bin/product/office-proplus-georg-august-universitaet-goettingen-microsoft-bueroapplikationen-P10016549!381464">hier</a>.</p>
+<p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende das Programm günstig über eine Uni-Lizenz erwerben (auch für andere Programme gibt es Campus-Lizenzen). Klicken Sie dazu einfach <a href="https://www.uni-goettingen.de/de/campuslizenzen+%26dash%3B+software+f%C3%BCr+studierende/624709.html">hier</a>.</p>
 <p>Eine frei verfügbare Alternative zu Microsoft Excel ist das Programm <strong>Libre Office Calc</strong>, welches Sie <a href="https://de.libreoffice.org/discover/calc/">hier</a> herunterladen können. Auch mit Libre Office Calc kann man die meisten Dinge machen. Die Übungen in diesem Seminar werden aber trotzdem mit Excel durchgeführt.</p>
 <p><br /></p>
-<p>In dieser ersten Sitzung möchten wir Sie mit dem Programm Excel vertraut machen. Das Lehrvideo, dass wir für Sie dafür bereitstellen finden Sie <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604322348096">hier</a>. Zusätzlich ist alles auch auf dieser Seite beschrieben. Sie können also einfach das Video schauen, oder (und) diese Seite durchlesen.</p>
-<p>Für alle nachfolgenden Sitzungen finden sie die Links zu den Videos in der Seite zu den Materialien, also <a href="page-q1_materials.html">hier</a>.</p>
 <p><br /></p>
-<div id="erste-schritte---die-exceloberfläche" class="section level1">
-<h1><span class="header-section-number">1</span> Erste Schritte - die Exceloberfläche</h1>
+<div id="erste-schritte---die-exceloberfläche" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Erste Schritte - die Exceloberfläche</h1>
 <p>Wenn Sie Excel installiert haben und öffnen, sieht die Oberfläche zunächst so aus, wie in dem Bild unten.</p>
 <p>Sie haben hier die Möglichkeit, aus verschiedenen “Vorlagen” zu wählen, bereits existierende Dateien aus einem Ordner heraus zu öffnen, oder ein neues Dokument zu beginnen. Excel-Dokumente heißen <strong>Arbeitsmappen</strong>. Um eine neue Arbeitsmappe zu erstellen, klicken Sie ganz einfach auf <strong>Leere Arbeitsmappe</strong>.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_oeffnen.PNG" style="width:70.0%" /> <br /> <br /></p>
-<div id="die-arbeitsmappenansicht" class="section level2">
-<h2><span class="header-section-number">1.1</span> Die Arbeitsmappenansicht</h2>
+<div id="die-arbeitsmappenansicht" class="section level2" number="1.1">
+<h2 number="1.1"><span class="header-section-number">1.1</span> Die Arbeitsmappenansicht</h2>
 <p>Nachdem sie auf “Leere Arbeitsmappe” geklickt haben, gelangen Sie zur Arbeitsmappenansicht, die so aussieht, wie im Bild unten dargestellt. Im Wesentlichen sieht eine Arbeitsmappe aus wie eine riesige Tabelle, in der es jede Menge <strong>Spalten</strong> und <strong>Zeilen</strong> gibt. Spalten sind durch <strong>Buchstaben</strong> (A, B, C, …) und Zeilen durch <strong>Zahlen</strong> (1, 2, 3, …) gekennzeichnet. Die Schnittstelle zwischen einer Spalte und einer Zeile nennt man in Excel <strong>Zelle</strong>. Durch die Spalten- und Zeilenbeschriftungen kann also jede Zelle eindeutig benannt werden. Im Bild unten sind zur Verdeutlichung zwei Zellen rot markiert. Zum Beispiel befindet sich die erste rot markierte Zelle Spalte <strong>R</strong> und dort wiederum in Zeile <strong>3</strong>. Diese Zelle heißt also <strong>R3</strong>.</p>
 <p><img src="images/q1_01einf/tabelle_uebersicht.PNG" /> <br /> <br /></p>
 <p>Sie können mit Ihrer Maus in eine beliebe Zelle klicken. Die Zelle, die Sie anklicken, wird dann zur besseren Orientierung durch einem grünen Rahmen markiert. Wie Sie sehen können, ist im Bild die Zelle <strong>A1</strong> markiert.</p>
@@ -537,8 +536,8 @@ div.tocify {
 <p><br /></p>
 </div>
 </div>
-<div id="eine-erste-tabelle-und-eine-erste-berechnung" class="section level1">
-<h1><span class="header-section-number">2</span> Eine erste Tabelle und eine erste Berechnung</h1>
+<div id="eine-erste-tabelle-und-eine-erste-berechnung" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Eine erste Tabelle und eine erste Berechnung</h1>
 <p><strong>Beispiel – Die Lebenserwartung von Eichhörnchen und Grauhörnchen:</strong></p>
 <p>Wir könnten jetzt zum Beispiel eine kleine Tabelle erstellen, in der wir uns die Lebenserwartungen von amerikanischen Grauhörnchen und europäischen Eichhörnchen notieren. Diese Tabelle ist in der ersten Abbildung unten dargestellt. Wie Sie dort sehen können, beträgt die durschnittliche Lebenserwartung von Eichhörnchen drei Jahre (das steht in… genau, in Zelle <strong>B2</strong>) und die von Grauhörnchen zehn Jahre (Zelle <strong>B3</strong>). Ein ziemlich großer Unterschied.</p>
 <p>Das schöne an Excel ist, dass man damit nicht nur Dinge notieren, sondern auch damit <strong>rechnen</strong> kann. Wir könnten jetzt z.B. die Differenz der zwei notierten Lebenserwartungen berechnen und das Ergebnis in Zelle <strong>D3</strong> hineinschreiben.</p>
@@ -549,14 +548,14 @@ div.tocify {
 <p>Ein weniger offensichtlicher aber gewaltiger Vorteil ist, dass die Ergebniszelle (<strong>D3</strong>) auf diese Weise <strong>“dynamisch”</strong> wird. Damit ist gemeint, dass sich das Ergebnis der Berechnung <strong>automatisch anpasst</strong>, wenn man in der Ausgangstabelle die <strong>Werte verändert</strong>. Stellen Sie sich vor, eine neue Studie hätte ergeben, dass europäische Eichhörnchen doch älter werden als zunächst gedacht (eine schöne Nachricht). Ändern Sie die “3” in eine “4”. Was passiert mit der berechneten Differenz? Genau, das Ergebnis wird automatisch aktualisiert (6 statt 7).</p>
 <p><br /></p>
 </div>
-<div id="speichern-einer-arbeitsmappe" class="section level1">
-<h1><span class="header-section-number">3</span> Speichern einer Arbeitsmappe</h1>
+<div id="speichern-einer-arbeitsmappe" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Speichern einer Arbeitsmappe</h1>
 <p>Eine so wichtige Tabelle wie unsere Hörnchenlebenserwartungstabelle darf natürlich auf keinen Fall verloren gehen. Deshalb sollte man wissen, wie man Arbeitsmappen <strong>abspeichern</strong> kann. Das funktioniert in Excel wie mit den meisten Programmen, die Sie schon kennen.Klicken Sie oben im <strong>grünen Bereich</strong> des Programms auf <strong>Datei</strong>. In dem erscheinenden Menü finden Sie die Auswahl <strong>“Speichern unter”</strong>. Damit können Sie die gegenwärtige Arbeitsmappe in einem beliebigen Ordner Ihres Rechners speichern. Am besten erstellen Sie sich einen neuen Ordner, den Sie “Quanti 1” nennen. Dort können Sie dann alle Excel-Dateien, die Sie im Verlauf dieses Semesters erstellen werden, sammeln.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_speichern.PNG" style="width:70.0%" /> <br /> <br /></p>
 </div>
-<div id="ein-etwas-komplexeres-beispiel" class="section level1">
-<h1><span class="header-section-number">4</span> Ein etwas komplexeres Beispiel</h1>
+<div id="ein-etwas-komplexeres-beispiel" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Ein etwas komplexeres Beispiel</h1>
 <p>Nachdem Sie sich nun ein wenig mit der Excel-Umgebung vertraut gemacht haben, wollen wir uns jetzt zum Ende dieser Einführungssitzung noch ein etwas umfangreicheres Beispiel ansehen.</p>
 <p><strong>Die Geburtstage der Studierenden im Wintersemester 19/20:</strong></p>
 <p>Im Bild unten sehen Sie eine ziemlich große Tabelle, in der die Gebutstagsdaten aller Studierenden der Uni Göttingen aufgelistet sind, die zum Zeitpunkt des 10.10.2019 an der Universität immatrikuliert gewesen waren (selbstverständlich alles anonymisiert). Mit Hilfe der Daten in dieser Tabelle wollen wir uns jetzt noch einige sehr nützliche Excel-Funktionen ansehen.</p>
@@ -570,8 +569,8 @@ div.tocify {
 <p><strong>TIPP:</strong> <em>Ganz unten auf der Seite finden Sie auch ein Tutorial-Video, in dem wir einen Teil der Lösung der Aufgaben besprechen. Bevor Sie das Video schauen, sollten Sie aber zunächst weiterlesen.</em></p>
 </div>
 <p><br /> <br /></p>
-<div id="aufgabe-1-wie-viele-studierende-waren-im-wise-20192020-eingeschrieben" class="section level2">
-<h2><span class="header-section-number">4.1</span> Aufgabe 1) Wie viele Studierende waren im WiSe 2019/2020 eingeschrieben?</h2>
+<div id="aufgabe-1-wie-viele-studierende-waren-im-wise-20192020-eingeschrieben" class="section level2" number="4.1">
+<h2 number="4.1"><span class="header-section-number">4.1</span> Aufgabe 1) Wie viele Studierende waren im WiSe 2019/2020 eingeschrieben?</h2>
 <p><strong>Die erste Excel-Funktion:</strong></p>
 <p>Das Ergebnis soll in Zelle <strong>J33</strong> geschrieben werden, also in die Zelle rechts neben der Zelle, die <strong>“Gesamtanzahl”</strong> heißt. Eine Gesamtzahl lässt sich in Excel sehr schnell mit Hilfe der so genannten <strong>“Summenfunktion”</strong> ermitteln. Die Summenfunktion ist die erste <strong>Excel-Funktion</strong>, die Sie jetzt kennenlernen werden. Die Notation der Funktion ist <strong>=SUMME()</strong>.</p>
 <p>So gehts: klicken Sie in Zelle <strong>J33</strong> und schreiben Sie wieder “<span class="math inline">\(=\)</span>”. Schreiben Sie unmittelbar dahinter “<strong>SUMME</strong>” und öffnen sie eine runde Klammer, “<strong>(</strong>”. Markieren Sie nun mit ihrer Maus (klicken und gedrückt halten) den Spaltenbereich in Spalte <strong>F</strong>, in der die Anzahlen der Studierenden aufgelistet sind.Sie sollten einen farbigen Rahmen um diesen Spaltenbereich herum sehen. Danach beenden Sie die begonnende Funktion mit einer geschlossenen Klammer, “<strong>)</strong>”, und drücken Enter. Sie sollten jetzt das Ergebnis sehen (30405). So viele Studierende waren also im letzten Jahr an der gesamten Uni Göttingen eingeschrieben.</p>
@@ -580,8 +579,8 @@ div.tocify {
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_summe.PNG" style="width:100.0%" /> <br /> <br /></p>
 </div>
-<div id="aufgabe-2-zählen-sie-aus-wie-viele-studierende-in-jeder-jahreszeit-geburtstag-haben" class="section level2">
-<h2><span class="header-section-number">4.2</span> Aufgabe 2) Zählen Sie aus, wie viele Studierende in jeder Jahreszeit Geburtstag haben</h2>
+<div id="aufgabe-2-zählen-sie-aus-wie-viele-studierende-in-jeder-jahreszeit-geburtstag-haben" class="section level2" number="4.2">
+<h2 number="4.2"><span class="header-section-number">4.2</span> Aufgabe 2) Zählen Sie aus, wie viele Studierende in jeder Jahreszeit Geburtstag haben</h2>
 <p>Um diese Aufgabe zu lösen, bietet es sich an, die Jahreszeitenspalte (Spalte <strong>A</strong>) zunächst zu sortieren. Markieren Sie dazu mittels “Klicken und Ziehen” den gesamten Abschnitt in Spalte <strong>A</strong>, in dem die Jahreszeiten stehen. Danach finden Sie oben rechts im Menübereich die Rubrik <strong>“Sortieren und Filtern”</strong>. Unten sehen Sie wieder ein Beispielbild. Dort können Sie auswählen, ob sie die Spalte “rückwärts” von Z nach A oder “vorwärts” von A nach Z sortieren wollen. Wir nehmen in diesem Fall von Z nach A, da dann der Winter, mit dem das Jahr beginnt, oben steht.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/excel_marksort.PNG" style="width:100.0%" /> <br /></p>
@@ -605,8 +604,8 @@ div.tocify {
 <p><br /></p>
 <p><br /></p>
 </div>
-<div id="aufgabe-3-zählen-sie-aus-wie-viele-studierende-in-jedem-monat-geburtstag-haben" class="section level2">
-<h2><span class="header-section-number">4.3</span> Aufgabe 3) Zählen Sie aus, wie viele Studierende in jedem Monat Geburtstag haben</h2>
+<div id="aufgabe-3-zählen-sie-aus-wie-viele-studierende-in-jedem-monat-geburtstag-haben" class="section level2" number="4.3">
+<h2 number="4.3"><span class="header-section-number">4.3</span> Aufgabe 3) Zählen Sie aus, wie viele Studierende in jedem Monat Geburtstag haben</h2>
 <p>Um diese Aufgabe zu lösen, könnten Sie natürlich jetzt alles nach “Monat” sortieren und wieder mit der Summen-Funktion arbeiten. Excel hält aber eine ganze Menge Funktionen bereit und für die jetzige Aufgabe gibt es eine viel elegantere Lösung, die uns eine Menge Zeit erspart. Allerdings ist die dazugehörige Funktion dafür auch etwas komplexer.</p>
 <p>Die Funktion, die wir verwenden, heißt <strong>=SUMMEWENN()</strong>. Wie der Name schon andeutet, berechnet diese Funktion eine Summe <strong>wenn</strong> ein bestimmtes Kriterium erfüllt ist.</p>
 <p>In unserem Fall möchten wir immer dann alle Studierenden aufsummieren, wenn sie z.B. im Dezember Geburtstag haben (und danch alle, die im Januar Geburtstag haben usw.). Schreiben Sie sich daher zunächst die Monatsnamen in die noch leere Spalte “Monat” der Ergebnistabelle, so wie es im Bild unten bereits zu sehen ist.</p>
@@ -641,14 +640,14 @@ div.tocify {
 </div>
 <p><br /> <br /></p>
 </div>
-<div id="aufgabe-4-bestimmen-sie-den-prozentualen-anteil-der-studierenden-die-in-jeder-jahreszeit-geburtstag-haben" class="section level2">
-<h2><span class="header-section-number">4.4</span> Aufgabe 4) Bestimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</h2>
+<div id="aufgabe-4-bestimmen-sie-den-prozentualen-anteil-der-studierenden-die-in-jeder-jahreszeit-geburtstag-haben" class="section level2" number="4.4">
+<h2 number="4.4"><span class="header-section-number">4.4</span> Aufgabe 4) Bestimmen Sie den prozentualen Anteil der Studierenden, die in jeder Jahreszeit Geburtstag haben</h2>
 <p>Mit den Dingen, die Sie heute bereits gelernt haben (und mit ein wenig Nachdenken), können Sie versuchen, die vierte Aufgabe nun ganz alleine zu lösen. Zur Not wissen Sie ja jetzt auch, wo die zweite Arbeitsmappe mit der Lösung ist.</p>
 <p><br /></p>
 </div>
 </div>
-<div id="fragen-zur-selbstkontrolle" class="section level1">
-<h1><span class="header-section-number">5</span> Fragen zur Selbstkontrolle</h1>
+<div id="fragen-zur-selbstkontrolle" class="section level1" number="5">
+<h1 number="5"><span class="header-section-number">5</span> Fragen zur Selbstkontrolle</h1>
 <!---LEARNR EX 1-->
 <iframe style="margin:0 auto; min-width: 100%;" id="myIframe1" class="interactive" src="https://simonstephan.shinyapps.io/learnr_app1/" scrolling="no" frameborder="no">
 </iframe>
