--- a/mac_remoteDesk.html
+++ b/mac_remoteDesk.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Übungsdatensätze</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
