--- a/page-10korrelz.html
+++ b/page-10korrelz.html
@@ -380,7 +380,7 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Übungsdatensätze</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
