--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -13,6 +13,7 @@
 
 <title>Materialien für Quantitative Methoden I</title>
 
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -464,6 +465,8 @@ body {
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604926493807">click to watch</a></li>
 <li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2019”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">download</a></li>
 <li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2020”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2020.xlsx">download</a></li>
+<li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2021”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2021.xlsx">download</a></li>
+<li>Jahrgänge im Vergleich: <a href="q1_dataFiles/02_Jahrgänge%20im%20Vergleich.pdf">download</a></li>
 </ul>
 </div>
 <div id="sitzung-3-deskriptive-datenanalyse-und-grafiken" class="section level4">
