--- a/page-03deskriptiv.html
+++ b/page-03deskriptiv.html
@@ -690,8 +690,9 @@ div.tocify {
 <div id="zusatzaufgabe-zum-weiteren-üben" class="section level1">
 <h1><span class="header-section-number">3</span> Zusatzaufgabe zum weiteren Üben</h1>
 <p>Wir haben noch einen zusätzlichen Datensatz aus einem völlig anderen Szenario für Sie, mit dem Sie noch einmal alles üben können. Den Datensatz finden Sie <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">hier</a>. Das Szenario wird weiter unten beschrieben.</p>
-<p>Außerdem haben wir auch die Daten des Trolley-Experiments aus dem WiSe 20/21, an dem Sie selbst teilgenommen hatten. Diese Daten finden Sie <a href="q1_dataFiles/03_TrolleyData_WiSe20_Push_vs_Switch.xlsx">hier</a>. Schauen Sie sich an, wie gut die Daten aus dem WiSe 20/21 zu den im letzten Jahr erhobenen passen.</p>
-<p>Zusätzlich gibt es <a href="q1_dataFiles/03_Trolley_2020_OrderEffects_Zusatzaufgabe.xlsx">hier</a> eine weitere Arbeitsmappe mit den von Ihnen erhobenen Trolley-Daten. Dort können Sie prüfen, ob die Reihenfolge, in der die Szenarien im Experiment präsentiert wurden, einen Einfluss auf die moralischen Urteile hatte. (Die Aufgabe ist zum weiteren Üben bei Bedarf/Interesse gedacht, Sie müssen sie natürlich nicht bearbeiten).</p>
+<p>Außerdem haben wir auch die Daten des Trolley-Experiments aus dem WiSe 20/21. Diese Daten finden Sie <a href="q1_dataFiles/03_TrolleyData_WiSe20_Push_vs_Switch.xlsx">hier</a>. Schauen Sie sich an, wie gut die Daten aus dem WiSe 20/21 zu den im Video besprochenen passen.</p>
+<p>Zusätzlich gibt es <a href="q1_dataFiles/03_Trolley_2020_OrderEffects_Zusatzaufgabe.xlsx">hier</a> eine weitere Arbeitsmappe mit den erhobenen Trolley-Daten aus dem WiSe 20/21. Dort können Sie prüfen, ob die Reihenfolge, in der die Szenarien im Experiment präsentiert wurden, einen Einfluss auf die moralischen Urteile hatte. (Die Aufgabe ist zum weiteren Üben bei Bedarf/Interesse gedacht, Sie müssen sie natürlich nicht bearbeiten).</p>
+<p>Außerdem gibt es noch den Datensatz aus dem WiSe 21/22. Diesen finden Sie <a href="q1_dataFiles/03_TrolleyData_WiSe21_Push_vs_Switch.xlsx">hier</a>.</p>
 <p><br></p>
 <div id="szenario" class="section level2">
 <h2><span class="header-section-number">3.1</span> Szenario</h2>
