--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -475,6 +475,7 @@ body {
 <li>Excel-Datensatz “Trolley-Dilemma”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik.xlsx">download</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21”: <a href="q1_dataFiles/03_TrolleyData_WiSe20_Push_vs_Switch.xlsx">download</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21” (Zusatzaufgabe): <a href="q1_dataFiles/03_Trolley_2020_OrderEffects_Zusatzaufgabe.xlsx">download</a></li>
+<li>Excel-Datensatz “Trolley-Dilemma WiSe 21/22”: <a href="q1_dataFiles/03_TrolleyData_WiSe21_Push_vs_Switch.xlsx">download</a></li>
 <li>Excel-Datensatz “Nussdiät und Fitness von Eichhörnchen”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">download</a></li>
 </ul>
 <hr />
