--- a/page-04wsk_vert.html
+++ b/page-04wsk_vert.html
@@ -580,7 +580,7 @@ div.tocify {
 <p>Nachdem Sie nun eine Weile mit der theoretischen Wahrscheinlichkeitsverteilung gearbeitet und ein paar Wahrscheinlichkeiten berechnet haben, wie sieht es mit ihrem Gefühl aus? Haben Sie da eine faire Münze vor sich?</p>
 <div id="neues-wissen" class="section level4">
 <h4><span class="header-section-number">2.1.3.1</span> Neues Wissen</h4>
-<p>Stellen Sie sich nun folgendes vor: Sie treffen eine Freundin, der diese Art Münze bekannt ist. Sie weiß, dass diese Münze aus einem Geschäft für Zauberzubehör stammt. Dort gibt es genau zwei verschiedene Typen dieser Art Münze. Ein Münztyp ist tatsächlich fair und der andere “unfair”. Ihre Freundin weiß auch, dass die unfairen Münzen so gestaltet sind, dass sie mit 70%-iger Wahrscheinlichkeit “Kopf” produzieren.</p>
+<p>Stellen Sie sich nun Folgendes vor: Sie treffen eine Freundin, der diese Art Münze bekannt ist. Sie weiß, dass diese Münze aus einem Geschäft für Zauberzubehör stammt. Dort gibt es genau zwei verschiedene Typen dieser Art Münze. Ein Münztyp ist tatsächlich fair und der andere “unfair”. Ihre Freundin weiß auch, dass die unfairen Münzen so gestaltet sind, dass sie mit 70%-iger Wahrscheinlichkeit “Kopf” produzieren.</p>
 <p>Wie würde die Wahrscheinlichkeitsverteilung für “Kopf” aussehen, wenn es sich um eine Münze vom “unfairen” Typ handeln würde? Benutzen Sie <strong>Spalte D</strong> der bestehenden Tabelle, um diese Wahrscheinlichkeitsverteilung zu ermitteln. Machen Sie anschließend auch wieder eine Grafik der Verteilung. Versuchen sie sogar, eine gemeinsame Abbildung zu erstellen, die beide Wahrscheinlichkeitsverteilungen zeigt. Das Ergebnis sollte ungefähr so aussehen:</p>
 <p><br> <img src="images/q1_04wsk/two_binomverts.PNG#bordered" style="width:100.0%" /> <br></p>
 <p>Hier noch ein kurzes Tutorial für das Erstellen einer Grafik mit zwei Wertereihen:</p>
@@ -597,8 +597,8 @@ div.tocify {
 </div>
 <div id="simulation" class="section level2">
 <h2><span class="header-section-number">2.2</span> Simulation</h2>
-<p>In der Shiny-App (bereitgestellt von der Uni Albany) unten sehen Sie einen “Verteilungssimulator” für die Binomialverteilung. Wie Sie schon wissen, sind <span class="math inline">\(p\)</span> (die Wahrscheinlichkeit für “Erfolg”) und <span class="math inline">\(n\)</span> (Anzahl der Wiederholungen) die wichtigen Parameter der Verteilung. Benutzen Sie den Simulator, um nacheinander die beiden Verteilungen unseres Szenarios nachzubilden. Mit den Optionen unter “Find probabilities for regions using Cut Points” können Sie versuchen, die Wahrscheinlichkeiten, die Sie bereits in Excel ermittelt haben, zu erhalten.</p>
-<p><br /> <iframe width="900" height="700" src="https://shiny.rit.albany.edu/stat/binomial/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
+<p>In dem Simulator unten (bereitgestellt von <a href="https://www.geogebra.org/m/qkucpmmn" class="uri">https://www.geogebra.org/m/qkucpmmn</a>) sehen Sie einen “Verteilungssimulator” für die Binomialverteilung. Wie Sie schon wissen, sind <span class="math inline">\(p\)</span> (die Wahrscheinlichkeit für “Erfolg”) und <span class="math inline">\(n\)</span> (Anzahl der Wiederholungen) die wichtigen Parameter der Verteilung. Benutzen Sie den Simulator, um nacheinander die beiden Verteilungen unseres Szenarios nachzubilden.</p>
+<p><br /> <iframe width="900" height="700" src="https://www.geogebra.org/m/qkucpmmn" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
 </div>
 <div id="verteilungsschiefe" class="section level2">
 <h2><span class="header-section-number">2.3</span> Verteilungsschiefe</h2>
