--- a/page-04wsk_vert.html
+++ b/page-04wsk_vert.html
@@ -597,7 +597,7 @@ div.tocify {
 </div>
 <div id="simulation" class="section level2">
 <h2><span class="header-section-number">2.2</span> Simulation</h2>
-<p>In dem Simulator unten (bereitgestellt von <a href="https://www.geogebra.org/m/qkucpmmn" class="uri">https://www.geogebra.org/m/qkucpmmn</a>) sehen Sie einen “Verteilungssimulator” für die Binomialverteilung. Wie Sie schon wissen, sind <span class="math inline">\(p\)</span> (die Wahrscheinlichkeit für “Erfolg”) und <span class="math inline">\(n\)</span> (Anzahl der Wiederholungen) die wichtigen Parameter der Verteilung. Benutzen Sie den Simulator, um nacheinander die beiden Verteilungen unseres Szenarios nachzubilden.</p>
+<p>In dem Simulator unten (bereitgestellt von <a href="https://www.geogebra.org/m/qkucpmmn" class="uri">https://www.geogebra.org/m/qkucpmmn</a>) sehen Sie einen “Verteilungssimulator” für die Binomialverteilung. Wie Sie schon wissen, sind <span class="math inline">\(p\)</span> (die Wahrscheinlichkeit für “Erfolg”) und <span class="math inline">\(n\)</span> (Anzahl der Wiederholungen) die wichtigen Parameter der Verteilung. Benutzen Sie den Simulator, um ein besseres Gefühl für die Binomialverteilung zu bekommen.</p>
 <p><br /> <iframe width="900" height="700" src="https://www.geogebra.org/m/qkucpmmn" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br /> <br /></p>
 </div>
 <div id="verteilungsschiefe" class="section level2">
