--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -13,6 +13,7 @@
 
 <title>Materialien für Quantitative Methoden I</title>
 
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -525,6 +526,7 @@ body {
 <ul>
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1610370034874">click to watch</a></li>
 <li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
+<li>Zusatzaufgabe aus vorletztem Jahr (mit den Daten können auch Trends geübt werden): <a href="q1_dataFiles/08_Kontraste_Zusatz.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-10-wilcoxon-rangsummentest" class="section level4">
