--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -516,9 +516,11 @@ div.tocify {
 <div class="column-right">
 <p><img src="images/q1_01einf/excelsquirrel.PNG" /></p>
 </div>
-<p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende das Programm günstig über eine Uni-Lizenz erwerben (auch für andere Programme gibt es Campus-Lizenzen). Klicken Sie dazu einfach <a href="https://www.uni-goettingen.de/de/campuslizenzen+%26dash%3B+software+f%C3%BCr+studierende/624709.html">hier</a>.</p>
+<p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende/r das Programm günstig über eine Uni-Lizenz bei studyhouse erwerben. Klicken Sie dazu einfach <a href="https://www.studyhouse.de/cgi-bin/product/office-proplus-georg-august-universitaet-goettingen-microsoft-bueroapplikationen-P10016549!381464">hier</a>.</p>
 <p>Eine frei verfügbare Alternative zu Microsoft Excel ist das Programm <strong>Libre Office Calc</strong>, welches Sie <a href="https://de.libreoffice.org/discover/calc/">hier</a> herunterladen können. Auch mit Libre Office Calc kann man die meisten Dinge machen. Die Übungen in diesem Seminar werden aber trotzdem mit Excel durchgeführt.</p>
 <p><br /></p>
+<p>In dieser ersten Sitzung möchten wir Sie mit dem Programm Excel vertraut machen. Das Lehrvideo, dass wir für Sie dafür bereitstellen finden Sie <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604322348096">hier</a>. Zusätzlich ist alles auch auf dieser Seite beschrieben. Sie können also einfach das Video schauen, oder (und) diese Seite durchlesen.</p>
+<p>Für alle nachfolgenden Sitzungen finden sie die Links zu den Videos in der Seite zu den Materialien, also <a href="page-q1_materials.html">hier</a>.</p>
 <p><br /></p>
 <div id="erste-schritte---die-exceloberfläche" class="section level1">
 <h1><span class="header-section-number">1</span> Erste Schritte - die Exceloberfläche</h1>
@@ -557,8 +559,8 @@ div.tocify {
 <h1><span class="header-section-number">4</span> Ein etwas komplexeres Beispiel</h1>
 <p>Nachdem Sie sich nun ein wenig mit der Excel-Umgebung vertraut gemacht haben, wollen wir uns jetzt zum Ende dieser Einführungssitzung noch ein etwas umfangreicheres Beispiel ansehen.</p>
 <p><strong>Die Geburtstage der Studierenden im Wintersemester 19/20:</strong></p>
-<p>Im Bild unten sehen Sie eine ziemlich große Tabelle, in der die Geburtstagsdaten aller Studierenden der Uni Göttingen aufgelistet sind, die zum Zeitpunkt des 10.10.2019 an der Universität immatrikuliert gewesen waren (selbstverständlich alles anonymisiert). Mit Hilfe der Daten in dieser Tabelle wollen wir uns jetzt noch einige sehr nützliche Excel-Funktionen ansehen.</p>
-<p>Sie müssen sich diese Tabelle nicht selbst erstellen. Sie finden alle Materialien <a href="https://quantigoettingen.github.io/quantigoettingen/page-q1_materials.html">hier</a>.</p>
+<p>Im Bild unten sehen Sie eine ziemlich große Tabelle, in der die Gebutstagsdaten aller Studierenden der Uni Göttingen aufgelistet sind, die zum Zeitpunkt des 10.10.2019 an der Universität immatrikuliert gewesen waren (selbstverständlich alles anonymisiert). Mit Hilfe der Daten in dieser Tabelle wollen wir uns jetzt noch einige sehr nützliche Excel-Funktionen ansehen.</p>
+<p>Sie müssen sich diese Tabelle nicht selbst erstellen. Sie finden alle Materialen <a href="https://quantigoettingen.github.io/quantigoettingen/page-q1_materials.html">hier</a> und alternativ auch in stud.ip.</p>
 <p><br /></p>
 <p><img src="images/q1_01einf/geburtstage_1.PNG" style="width:100.0%" /> <br /> <br /></p>
 <p>In Spalte <strong>C</strong> stehen die verschiedenen Geburtstagsdaten, in Spalte <strong>B</strong> der dazugehörige Monat und in Spalte <strong>A</strong> die dazugehörige Jahreszeit. In Datumsspalte <strong>C</strong> ist über die Spalten <strong>D</strong> und <strong>E</strong> noch einmal aufgeteilt (in Tag und Monat). Spalte <strong>F</strong> gibt an, wie viele Studierende an einem bestimmten Tag Geburstag haben.</p>
