--- a/page-02datenaufb.html
+++ b/page-02datenaufb.html
@@ -520,7 +520,7 @@ div.tocify {
 <p>Die Daten zum Auswerten kommen dabei teilweise von Ihnen selbst! Wir möchten Sie bitten, zwei kurze Fragebögen auszufüllen (in einem geht es um umweltbezogenes Verhalten, im anderen um Prokrastination) - das sollte insgesamt nicht länger als 5 Minuten dauern. Die Daten stellen wir dann zum Üben bereit, sobald sie erhoben sind. Die Teilnahme ist natürlich freiwillig und anonym!</p>
 <p><a href="https://ww2.unipark.de/uc/NEngelmann/9058/">Hier</a> geht’s zur Umfrage! Gerne vor dem weiteren Lesen ausfüllen.</p>
 <p>Da wir die gleichen Fragebögen bereits im letzten Jahrgang bearbeiten lassen haben, können wir mit diesen Daten anfangen. Dieselben Arbeitsschritte können Sie dann in ein paar Tagen an Ihren eigenen Jahrgangsdaten noch einmal eigenständig üben. <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">Hier</a> geht’s zu den 2019er-Daten und <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2020.xlsx">hier</a> zu denen von 2020.</p>
-<p>Bei allen Datensätzen handelt es sich um simple Umfragen und nicht um Experimente. Was unterscheidet eine Umfrage von einem Experiment? Mehr Infos dazu finden sie <a href="https://lexikon.stangl.eu/3447/experiment/">hier</a>.</p>
+<p>Bei allen Datensätzen handelt es sich um simple Umfragen und nicht um Experimente. Was unterscheidet eine Umfrage von einem Experiment? Mehr Infos dazu finden Sie <a href="https://lexikon.stangl.eu/3447/experiment/">hier</a>.</p>
 <p>Das Vorgehen wird hier nur für den Umwelt-Fragebogen veranschaulicht. Die Auswertungsschritte für den Prokrastinations-Fragebogen sind weitgehend identisch und können der Musterlösung entnommen werden.</p>
 <p><br /></p>
 <div id="der-datensatz" class="section level1">
