--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -13,6 +13,7 @@
 
 <title>Materialien für Quantitative Methoden I</title>
 
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -451,7 +452,7 @@ body {
 <ul>
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604322348096">click to watch</a></li>
 <li>Excel-Datensatz “Lebenserwartung von Hörnchen”: <a href="q1_dataFiles/01_Einfuehrung_LebenserwartungHoernchen.xlsx">download</a></li>
-<li>Excel-Datensatz “Geburtstage und Jahreszeiten”: <a href="q1_dataFiles/01_Einfuehrung_Geburtstage.xlsx">download</a></li>
+<li>Excel-Datensatz “Geburtstage und Jahreszeiten”: <a href="q1_dataFiles/01_Einfuehrung_Geburtstage_new.xlsx">download</a></li>
 </ul>
 <hr />
 <h2>
@@ -464,6 +465,8 @@ body {
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604926493807">click to watch</a></li>
 <li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2019”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">download</a></li>
 <li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2020”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2020.xlsx">download</a></li>
+<li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2021”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2021.xlsx">download</a></li>
+<li>Jahrgänge im Vergleich: <a href="q1_dataFiles/02_Jahrgänge%20im%20Vergleich.pdf">download</a></li>
 </ul>
 </div>
 <div id="sitzung-3-deskriptive-datenanalyse-und-grafiken" class="section level4">
@@ -472,7 +475,8 @@ body {
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1605530858993">click to watch</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik.xlsx">download</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21”: <a href="q1_dataFiles/03_TrolleyData_WiSe20_Push_vs_Switch.xlsx">download</a></li>
-<li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21” (Zusatzaufgabe): <a href="q1_dataFiles/03_Trolley_2020_OrderEffects_Zusatzaufgabe.xlsx">download</a></li>
+<li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21” (Zusatzaufgabe): <a href="q1_dataFiles/03_Trolley_2020_OrderEffects_Zusatzaufgabe_korrektur.xlsx">download</a></li>
+<li>Excel-Datensatz “Trolley-Dilemma WiSe 21/22”: <a href="q1_dataFiles/03_TrolleyData_WiSe21_Push_vs_Switch.xlsx">download</a></li>
 <li>Excel-Datensatz “Nussdiät und Fitness von Eichhörnchen”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik_Zusatzaufgabe_HoernchenFitness.xlsx">download</a></li>
 </ul>
 <hr />
@@ -522,6 +526,7 @@ body {
 <ul>
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1610370034874">click to watch</a></li>
 <li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
+<li>Zusatzaufgabe aus vorletztem Jahr (mit den Daten können auch Trends geübt werden): <a href="q1_dataFiles/08_Kontraste_Zusatz.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-10-wilcoxon-rangsummentest" class="section level4">
