--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -550,6 +550,13 @@ body {
 <li>Excel-Datensatz “Covid-Impfung”: <a href="q1_dataFiles/12_Nominaldaten.xlsx">download</a></li>
 </ul>
 </div>
+<div id="zusatz-aufgaben-zur-formulierung-von-hypothesen-und-auswahl-von-statistischen-tests" class="section level4">
+<h4>Zusatz: Aufgaben zur Formulierung von Hypothesen und Auswahl von statistischen Tests</h4>
+<ul>
+<li>die Aufgaben gibts <a href="q1_dataFiles/Testentscheidungen_Aufgabe.pdf">hier</a></li>
+<li>die Lösungen gibts <a href="q1_dataFiles/Testentscheidungen_Loesung.pdf">hier</a></li>
+</ul>
+</div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
 
