--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -549,12 +549,22 @@ body {
 <li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1612184087205">click to watch</a></li>
 <li>Excel-Datensatz “Covid-Impfung”: <a href="q1_dataFiles/12_Nominaldaten.xlsx">download</a></li>
 </ul>
+<hr />
+<h2>
+<font style="color:lightgrey;"> Zusatzmaterial </font>
+</h1>
 </div>
-<div id="zusatz-aufgaben-zur-formulierung-von-hypothesen-und-auswahl-von-statistischen-tests" class="section level4">
-<h4>Zusatz: Aufgaben zur Formulierung von Hypothesen und Auswahl von statistischen Tests</h4>
+<div id="zusatzaufgaben-aufgaben-zur-formulierung-von-hypothesen-und-auswahl-von-statistischen-tests" class="section level4">
+<h4>Zusatzaufgaben: Aufgaben zur Formulierung von Hypothesen und Auswahl von statistischen Tests</h4>
 <ul>
 <li>die Aufgaben gibts <a href="q1_dataFiles/Testentscheidungen_Aufgabe.pdf">hier</a></li>
 <li>die Lösungen gibts <a href="q1_dataFiles/Testentscheidungen_Loesung.pdf">hier</a></li>
+</ul>
+</div>
+<div id="formelsammlung" class="section level4">
+<h4>Formelsammlung</h4>
+<ul>
+<li>einen ZIP-Folder mit der Formelsammlung könnt hier <a href="q1_dataFiles/Formelsammlung.zip">hier</a> downloaden.</li>
 </ul>
 </div>
 
