--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Videos, Übungsdatensätze und Zusatzmaterial</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -559,6 +559,12 @@ body {
 <ul>
 <li>die Aufgaben gibts <a href="q1_dataFiles/Testentscheidungen_Aufgabe.pdf">hier</a></li>
 <li>die Lösungen gibts <a href="q1_dataFiles/Testentscheidungen_Loesung.pdf">hier</a></li>
+</ul>
+</div>
+<div id="zusatzaufgaben-zum-rechnen" class="section level4">
+<h4>Zusatzaufgaben zum Rechnen</h4>
+<ul>
+<li>die Excel-Files mit diversen weiteren Übungsaufgaben gibt es in einem ZIP-Folder zum Download <a href="q1_dataFiles/Zusatzuebungen.zip">hier</a>.</li>
 </ul>
 </div>
 <div id="formelsammlung" class="section level4">
